cpoo/cc/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-8-oracle/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.11.jar:/usr/share/bluej/hamcrest-core-1.3.jar:/usr/share/bluej/lang-stride.jar:/usr/share/bluej/userlib/pi4j-device.jar:/usr/share/bluej/userlib/pi4j-core.jar:/usr/share/bluej/userlib/pi4j-service.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/home/user/Bureau/kholle/cpoo/cc
-d
/home/user/Bureau/kholle/cpoo/cc/doc
-encoding
UTF-8
-charset
UTF-8
/home/user/Bureau/kholle/cpoo/cc/Main.java
<---- end of javadoc command ---->
Loading source file /home/user/Bureau/kholle/cpoo/cc/Main.java...
/home/user/Bureau/kholle/cpoo/cc/Main.java:54: error: illegal start of expression
       if () System.out.println ("Question 7:")
           ^
/home/user/Bureau/kholle/cpoo/cc/Main.java:54: error: ';' expected
       if () System.out.println ("Question 7:")
                                               ^
2 errors
